Stop using deprecated Locale constructor